Tidying up code, add cache variables

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\ContextInspector.TestHarness\packages.config" />
   <repository path="..\ContextInspector\packages.config" />
+  <repository path="..\MAB.ContextInspector.TestHarness\packages.config" />
 </repositories>
