Start work on front end UI

--- a/MAB.ContextInspector/MAB.ContextInspector.csproj
+++ b/MAB.ContextInspector/MAB.ContextInspector.csproj
@@ -97,7 +97,9 @@
       <DependentUpon>Index.cshtml</DependentUpon>
     </Compile>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Scripts\" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
